<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beeper_enabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beeper_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_enabled" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_period_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/beeper_hint_period"
        app:layout_constraintEnd_toStartOf="@+id/input_times_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_enabled"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_times_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:hint="@string/beeper_hint_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_period_layout"
        app:layout_constraintTop_toBottomOf="@+id/switch_enabled"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_frequency_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/beeper_hint_frequency"
        app:layout_constraintEnd_toStartOf="@+id/input_duration_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_period_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_duration_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:hint="@string/beeper_hint_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_frequency_layout"
        app:layout_constraintTop_toBottomOf="@+id/input_period_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_offset_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/beeper_hint_offset"
        app:layout_constraintEnd_toStartOf="@+id/input_after_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_frequency_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_after_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:hint="@string/beeper_hint_after"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_offset_layout"
        app:layout_constraintTop_toBottomOf="@+id/input_frequency_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_after"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_gain_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/beeper_hint_attenuation"
        app:layout_constraintEnd_toStartOf="@+id/waveform_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_offset_layout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/outline_info_24"
        app:endIconContentDescription="@string/beeper_help_icon_cd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_gain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/waveform_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_gain_layout"
        app:layout_constraintTop_toBottomOf="@+id/input_offset_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/label_waveform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beeper_hint_waveform"
                android:textSize="12sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_waveform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>